; ModuleID = '/home/carl/AnghaBench/Cinder/src/glload/extr_glx_load.c_LoadExt_MESA_set_3dfx_mode.c'
source_filename = "/home/carl/AnghaBench/Cinder/src/glload/extr_glx_load.c_LoadExt_MESA_set_3dfx_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [19 x i8] c"glXSet3DfxModeMESA\00", align 1
@_funcptr_glXSet3DfxModeMESA = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @LoadExt_MESA_set_3dfx_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @LoadExt_MESA_set_3dfx_mode() #0 {
  %1 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  %2 = call i64 @IntGetProcAddress(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  store i64 %2, i64* @_funcptr_glXSet3DfxModeMESA, align 8
  %3 = load i64, i64* @_funcptr_glXSet3DfxModeMESA, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %8, label %5

5:                                                ; preds = %0
  %6 = load i32, i32* %1, align 4
  %7 = add nsw i32 %6, 1
  store i32 %7, i32* %1, align 4
  br label %8

8:                                                ; preds = %5, %0
  %9 = load i32, i32* %1, align 4
  ret i32 %9
}

declare dso_local i64 @IntGetProcAddress(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
